[gd_scene load_steps=21 format=2]

[ext_resource path="res://Things/Die/Die.tscn" type="PackedScene" id=1]
[ext_resource path="res://Screens/Fight/Fight.gd" type="Script" id=2]
[ext_resource path="res://Screens/Fight/DiceTray.gd" type="Script" id=3]
[ext_resource path="res://Things/Die/Dice_tray.png" type="Texture" id=4]
[ext_resource path="res://Screens/Fight/RubikMonoOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Screens/Fight/ButtonBackground.tres" type="StyleBox" id=6]

[sub_resource type="DynamicFont" id=14]
size = 34
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 14.0
content_margin_right = 14.0
content_margin_top = 0.0
content_margin_bottom = 3.0
bg_color = Color( 0.0313726, 0.0941176, 0.12549, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 14.0
content_margin_right = 14.0
content_margin_top = 8.0
content_margin_bottom = 0.0
bg_color = Color( 0.0313726, 0.0941176, 0.12549, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="DynamicFont" id=11]
size = 34
extra_spacing_space = -13
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=15]
content_margin_left = 14.0
content_margin_right = 14.0
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color( 0.203922, 0.407843, 0.337255, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="DynamicFont" id=8]
size = 58
font_data = ExtResource( 5 )

[sub_resource type="InputEventKey" id=12]
scancode = 16777221

[sub_resource type="ShortCut" id=13]
shortcut = SubResource( 12 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float size_x = 0.008;
uniform float size_y = 0.008;

void fragment() {
	vec2 uv = SCREEN_UV;
	uv -= mod(uv, vec2(size_x, size_y));

	COLOR.rgb = textureLod(SCREEN_TEXTURE, uv, 0.0).rgb;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/size_x = 0.003
shader_param/size_y = 0.003

[sub_resource type="Shader" id=1]
code = "//---CRT Shader---
shader_type canvas_item;

uniform float scanline_count : hint_range(0, 1800) = 50.0;

vec2 uv_curve(vec2 uv)
{
	uv = (uv - 0.5) * 2.0;
	
	//You can modify the numbers and try different values
	uv.x *= 1.0 + pow(abs(uv.y) / 7.0, 2.0);
	uv.y *= 1.0 + pow(abs(uv.x) / 7.0, 2.0);
	
	//The scale part (you can delete it when you want)
	uv /= 1.0;
	
	uv = (uv/2.0) + 0.5;
	return uv;
}


void fragment()
{	
	float PI = 3.14159;
	
	//You can modify the *3.0, *-3.0 for a bigger or smaller 
	float r = texture(SCREEN_TEXTURE, uv_curve(SCREEN_UV) + vec2(SCREEN_PIXEL_SIZE.x*0.0), 0.0).r;
	float g = texture(SCREEN_TEXTURE, uv_curve(SCREEN_UV) + vec2(SCREEN_PIXEL_SIZE.x*.5), 0.0).g;
	float b = texture(SCREEN_TEXTURE, uv_curve(SCREEN_UV) + vec2(SCREEN_PIXEL_SIZE.x*-.5), 0.0).b;
	
	
	//If you dont want scanlines you can just delete this part
	float s = sin(uv_curve(SCREEN_UV).y * scanline_count * PI * 2.0);
	s = (s * 0.5 + 0.5) * 0.9 + 0.1;
	vec4 scan_line = vec4(vec3(pow(s, 0.1)), 1.0);
	
	
	COLOR = vec4(r, g, b, 1.0) * scan_line;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/scanline_count = 100.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 383.561, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 20.3438, 279.179 )

[node name="Fight" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI"]
margin_left = 10.5137
margin_top = 1088.58
margin_right = 711.514
margin_bottom = 1247.58
custom_constants/separation = 18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/UI/HBoxContainer"]
margin_right = 425.0
margin_bottom = 159.0
rect_min_size = Vector2( 425, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/HBoxContainer/CenterContainer"]
margin_left = 53.0
margin_top = 6.0
margin_right = 372.0
margin_bottom = 153.0

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/UI/HBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 319.0
margin_bottom = 43.0

[node name="ThrowLabel" type="Label" parent="CanvasLayer/UI/HBoxContainer/CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 319.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0.0313726, 0.0941176, 0.12549, 1 )
text = "Throws: 1/5"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/UI/HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 319.0
margin_bottom = 147.0
rect_min_size = Vector2( 0, 100 )

[node name="SavedDice" type="HBoxContainer" parent="CanvasLayer/UI/HBoxContainer/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 159.0
margin_top = 50.0
margin_right = 159.0
margin_bottom = 50.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/HBoxContainer"]
margin_left = 443.0
margin_right = 690.0
margin_bottom = 159.0
custom_constants/separation = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTurnButton" type="Button" parent="CanvasLayer/UI/HBoxContainer/VBoxContainer"]
margin_right = 247.0
margin_bottom = 49.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.878431, 0.972549, 0.815686, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.972549, 0.815686, 1 )
custom_colors/font_color_pressed = Color( 0.878431, 0.972549, 0.815686, 1 )
shortcut_in_tooltip = false
text = "End turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RollButton" type="Button" parent="CanvasLayer/UI/HBoxContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 247.0
margin_bottom = 152.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_disabled = Color( 0.0313726, 0.0941176, 0.12549, 1 )
custom_colors/font_color = Color( 0.878431, 0.972549, 0.815686, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.972549, 0.815686, 1 )
custom_colors/font_color_pressed = Color( 0.878431, 0.972549, 0.815686, 1 )
shortcut_in_tooltip = false
shortcut = SubResource( 13 )
text = "ROLL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shaders" type="Control" parent="CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBufferCopy2" type="BackBufferCopy" parent="CanvasLayer/Shaders"]
position = Vector2( 175.363, 537.401 )
scale = Vector2( 2.75363, 6.37401 )
copy_mode = 2
rect = Rect2( 0, 0, 200, 200 )

[node name="PixelShader" type="ColorRect" parent="CanvasLayer/Shaders/BackBufferCopy2"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -69.0
margin_top = -87.0
margin_right = 4.0
margin_bottom = -81.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBufferCopy" type="BackBufferCopy" parent="CanvasLayer/Shaders"]
position = Vector2( 4.2428, 1.41425 )
scale = Vector2( 3.54558, 6.38815 )
copy_mode = 2
rect = Rect2( 0, 0, 200, 200 )

[node name="VCRShader" type="ColorRect" parent="CanvasLayer/Shaders/BackBufferCopy"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -9.0
margin_right = 8.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceTray" type="Node2D" parent="."]
position = Vector2( -0.436523, 60 )
script = ExtResource( 3 )

[node name="TrayBackground" type="Sprite" parent="DiceTray"]
position = Vector2( 359.923, 732.339 )
texture = ExtResource( 4 )

[node name="Dice" type="Node2D" parent="DiceTray"]
position = Vector2( 343.887, 935.444 )

[node name="Die" parent="DiceTray/Dice" instance=ExtResource( 1 )]
position = Vector2( -218.002, -365.853 )

[node name="Die2" parent="DiceTray/Dice" instance=ExtResource( 1 )]
position = Vector2( 232.793, -365.853 )

[node name="Die3" parent="DiceTray/Dice" instance=ExtResource( 1 )]
position = Vector2( -205.529, -45.129 )

[node name="Die4" parent="DiceTray/Dice" instance=ExtResource( 1 )]
position = Vector2( 232.793, -68.2924 )

[node name="Die5" parent="DiceTray/Dice" instance=ExtResource( 1 )]
position = Vector2( 8.28638, -205.491 )

[node name="Walls" type="StaticBody2D" parent="DiceTray"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiceTray/Walls"]
position = Vector2( 363.335, 463.455 )
shape = SubResource( 5 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="DiceTray/Walls"]
position = Vector2( 349.081, 999.812 )
shape = SubResource( 5 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="DiceTray/Walls"]
position = Vector2( 5.24902, 735.197 )
shape = SubResource( 6 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="DiceTray/Walls"]
position = Vector2( 716.295, 735.197 )
shape = SubResource( 6 )

[node name="Center" type="Node2D" parent="DiceTray"]
position = Vector2( 358.887, 735.882 )

[connection signal="pressed" from="CanvasLayer/UI/HBoxContainer/VBoxContainer/EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/HBoxContainer/VBoxContainer/RollButton" to="." method="_on_RollButton_pressed"]
